--- a/subset.css
+++ b/subset.css
@@ -1,5 +1,4 @@
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
 body, .no-tribe-title, a, h1, h2, h3, h4, h5, h6, .home-share-type-link, .browsing-list-item-share-type-link, .share-type-link, .text-part
 {
     font-family: 'Poppins', sans-serif;
